--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<center>
 				<figure>
-					<a href="/"><img align="middle" title="Logo" src="logo1.png"></a>
+					<a href="/"><img align="middle" title="Logo" src="assets/logo.png"></a>
 				</figure>
 			</center>
 		</header>
